[package]
name = "mochi-margo-sys"
version = "0.1.0"
edition = "2021"
links = "margo"
build = "build.rs"
license-file = "COPYRIGHT"
description = "FFI bindings for the Margo library"
homepage = "https://github.com/mochi-hpc/mochi-rs-margo-sys"
repository = "https://github.com/mochi-hpc/mochi-rs-margo-sys"
readme = "README.md"
keywords = ["hpc", "rpc", "rdma"]

[lib]
doctest = false

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.63.0"
pkg-config = "0.3"
